--- a/package.json
+++ b/package.json
@@ -19,5 +19,23 @@
     "@eslint/eslintrc": "^3",
     "eslint": "^9",
     "eslint-config-next": "15.1.3"
-  }
+  },
+  "description": "An intelligent chatbot built with Next.js, React, and OpenAI's GPT API to provide instant Airbnb support assistance.",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/muzammil-13/airbnb-bot.git"
+  },
+  "keywords": [
+    "react",
+    "airbnb",
+    "chatbot",
+    "chatgpt"
+  ],
+  "author": "",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/muzammil-13/airbnb-bot/issues"
+  },
+  "homepage": "https://github.com/muzammil-13/airbnb-bot#readme"
 }
