--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "dotenv": "^16.4.7",
     "next": "15.1.3",
     "openai": "^4.78.1",
     "react": "^19.0.0",
