--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "openai": "^4.78.1",
     "react": "^19.0.0",
     "react-chatbot-kit": "^2.2.2",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "sass": "^1.83.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
