--- a/package.json
+++ b/package.json
@@ -1,43 +1,286 @@
 {
   "name": "airbnb-bot",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@vercel/analytics": "^1.4.1",
-    "@vercel/speed-insights": "^1.1.0",
-    "dotenv": "^16.4.7",
-    "next": "15.1.3",
-    "openai": "^4.78.1",
-    "react": "^19.0.0",
-    "react-chatbot-kit": "^2.2.2",
-    "react-dom": "^19.0.0",
-    "sass": "^1.83.4"
-  },
-  "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.3"
-  },
+  "version": "1.0.0",
   "description": "An intelligent chatbot built with Next.js, React, and OpenAI's GPT API to provide instant Airbnb support assistance.",
   "main": "index.js",
+  "dependencies": {
+    "abort-controller": "^3.0.0",
+    "acorn": "^8.14.0",
+    "acorn-jsx": "^5.3.2",
+    "agentkeepalive": "^4.6.0",
+    "ajv": "^6.12.6",
+    "ansi-styles": "^4.3.0",
+    "argparse": "^2.0.1",
+    "aria-query": "^5.3.2",
+    "array-buffer-byte-length": "^1.0.2",
+    "array-includes": "^3.1.8",
+    "array.prototype.findlast": "^1.2.5",
+    "array.prototype.findlastindex": "^1.2.5",
+    "array.prototype.flat": "^1.3.3",
+    "array.prototype.flatmap": "^1.3.3",
+    "array.prototype.tosorted": "^1.1.4",
+    "arraybuffer.prototype.slice": "^1.0.4",
+    "ast-types-flow": "^0.0.8",
+    "asynckit": "^0.4.0",
+    "available-typed-arrays": "^1.0.7",
+    "axe-core": "^4.10.2",
+    "axobject-query": "^4.1.0",
+    "balanced-match": "^1.0.2",
+    "brace-expansion": "^1.1.11",
+    "braces": "^3.0.3",
+    "busboy": "^1.6.0",
+    "call-bind": "^1.0.8",
+    "call-bind-apply-helpers": "^1.0.1",
+    "call-bound": "^1.0.3",
+    "callsites": "^3.1.0",
+    "caniuse-lite": "^1.0.30001690",
+    "chalk": "^4.1.2",
+    "client-only": "^0.0.1",
+    "color": "^4.2.3",
+    "color-convert": "^2.0.1",
+    "color-name": "^1.1.4",
+    "color-string": "^1.9.1",
+    "combined-stream": "^1.0.8",
+    "concat-map": "^0.0.1",
+    "cross-spawn": "^7.0.6",
+    "damerau-levenshtein": "^1.0.8",
+    "data-view-buffer": "^1.0.2",
+    "data-view-byte-length": "^1.0.2",
+    "data-view-byte-offset": "^1.0.1",
+    "debug": "^4.4.0",
+    "deep-is": "^0.1.4",
+    "define-data-property": "^1.1.4",
+    "define-properties": "^1.2.1",
+    "delayed-stream": "^1.0.0",
+    "detect-libc": "^2.0.3",
+    "doctrine": "^2.1.0",
+    "dotenv": "^16.4.7",
+    "dunder-proto": "^1.0.1",
+    "emoji-regex": "^9.2.2",
+    "enhanced-resolve": "^5.18.0",
+    "es-abstract": "^1.23.8",
+    "es-define-property": "^1.0.1",
+    "es-errors": "^1.3.0",
+    "es-iterator-helpers": "^1.2.1",
+    "es-object-atoms": "^1.0.0",
+    "es-set-tostringtag": "^2.0.3",
+    "es-shim-unscopables": "^1.0.2",
+    "es-to-primitive": "^1.3.0",
+    "escape-string-regexp": "^4.0.0",
+    "eslint": "^9.17.0",
+    "eslint-config-next": "^15.1.3",
+    "eslint-import-resolver-node": "^0.3.9",
+    "eslint-import-resolver-typescript": "^3.7.0",
+    "eslint-module-utils": "^2.12.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react": "^7.37.3",
+    "eslint-plugin-react-hooks": "^5.1.0",
+    "eslint-scope": "^8.2.0",
+    "eslint-visitor-keys": "^4.2.0",
+    "espree": "^10.3.0",
+    "esquery": "^1.6.0",
+    "esrecurse": "^4.3.0",
+    "estraverse": "^5.3.0",
+    "esutils": "^2.0.3",
+    "event-target-shim": "^5.0.1",
+    "fast-deep-equal": "^3.1.3",
+    "fast-glob": "^3.3.1",
+    "fast-json-stable-stringify": "^2.1.0",
+    "fast-levenshtein": "^2.0.6",
+    "fastq": "^1.18.0",
+    "file-entry-cache": "^8.0.0",
+    "fill-range": "^7.1.1",
+    "find-up": "^5.0.0",
+    "flat-cache": "^4.0.1",
+    "flatted": "^3.3.2",
+    "for-each": "^0.3.3",
+    "form-data": "^4.0.1",
+    "form-data-encoder": "^1.7.2",
+    "formdata-node": "^4.4.1",
+    "function-bind": "^1.1.2",
+    "function.prototype.name": "^1.1.8",
+    "functions-have-names": "^1.2.3",
+    "get-intrinsic": "^1.2.6",
+    "get-symbol-description": "^1.1.0",
+    "get-tsconfig": "^4.8.1",
+    "glob-parent": "^6.0.2",
+    "globals": "^14.0.0",
+    "globalthis": "^1.0.4",
+    "gopd": "^1.2.0",
+    "graceful-fs": "^4.2.11",
+    "graphemer": "^1.4.0",
+    "has-bigints": "^1.1.0",
+    "has-flag": "^4.0.0",
+    "has-property-descriptors": "^1.0.2",
+    "has-proto": "^1.2.0",
+    "has-symbols": "^1.1.0",
+    "has-tostringtag": "^1.0.2",
+    "hasown": "^2.0.2",
+    "humanize-ms": "^1.2.1",
+    "ignore": "^5.3.2",
+    "import-fresh": "^3.3.0",
+    "imurmurhash": "^0.1.4",
+    "internal-slot": "^1.1.0",
+    "is-array-buffer": "^3.0.5",
+    "is-arrayish": "^0.3.2",
+    "is-async-function": "^2.0.0",
+    "is-bigint": "^1.1.0",
+    "is-boolean-object": "^1.2.1",
+    "is-bun-module": "^1.3.0",
+    "is-callable": "^1.2.7",
+    "is-core-module": "^2.16.1",
+    "is-data-view": "^1.0.2",
+    "is-date-object": "^1.1.0",
+    "is-extglob": "^2.1.1",
+    "is-finalizationregistry": "^1.1.1",
+    "is-generator-function": "^1.0.10",
+    "is-glob": "^4.0.3",
+    "is-map": "^2.0.3",
+    "is-number": "^7.0.0",
+    "is-number-object": "^1.1.1",
+    "is-regex": "^1.2.1",
+    "is-set": "^2.0.3",
+    "is-shared-array-buffer": "^1.0.4",
+    "is-string": "^1.1.1",
+    "is-symbol": "^1.1.1",
+    "is-typed-array": "^1.1.15",
+    "is-weakmap": "^2.0.2",
+    "is-weakref": "^1.1.0",
+    "is-weakset": "^2.0.4",
+    "isarray": "^2.0.5",
+    "isexe": "^2.0.0",
+    "iterator.prototype": "^1.1.4",
+    "js-tokens": "^4.0.0",
+    "js-yaml": "^4.1.0",
+    "json-buffer": "^3.0.1",
+    "json-schema-traverse": "^0.4.1",
+    "json-stable-stringify-without-jsonify": "^1.0.1",
+    "json5": "^1.0.2",
+    "jsx-ast-utils": "^3.3.5",
+    "keyv": "^4.5.4",
+    "language-subtag-registry": "^0.3.23",
+    "language-tags": "^1.0.9",
+    "levn": "^0.4.1",
+    "locate-path": "^6.0.0",
+    "lodash.merge": "^4.6.2",
+    "loose-envify": "^1.4.0",
+    "math-intrinsics": "^1.1.0",
+    "merge2": "^1.4.1",
+    "micromatch": "^4.0.8",
+    "mime-db": "^1.52.0",
+    "mime-types": "^2.1.35",
+    "minimatch": "^3.1.2",
+    "minimist": "^1.2.8",
+    "ms": "^2.1.3",
+    "nanoid": "^3.3.8",
+    "natural-compare": "^1.4.0",
+    "next": "^15.1.3",
+    "node-domexception": "^1.0.0",
+    "node-fetch": "^2.7.0",
+    "object-assign": "^4.1.1",
+    "object-inspect": "^1.13.3",
+    "object-keys": "^1.1.1",
+    "object.assign": "^4.1.7",
+    "object.entries": "^1.1.8",
+    "object.fromentries": "^2.0.8",
+    "object.groupby": "^1.0.3",
+    "object.values": "^1.2.1",
+    "openai": "^4.78.1",
+    "optionator": "^0.9.4",
+    "own-keys": "^1.0.1",
+    "p-limit": "^3.1.0",
+    "p-locate": "^5.0.0",
+    "parent-module": "^1.0.1",
+    "path-exists": "^4.0.0",
+    "path-key": "^3.1.1",
+    "path-parse": "^1.0.7",
+    "picocolors": "^1.1.1",
+    "picomatch": "^2.3.1",
+    "possible-typed-array-names": "^1.0.0",
+    "postcss": "^8.4.31",
+    "prelude-ls": "^1.2.1",
+    "prop-types": "^15.8.1",
+    "punycode": "^2.3.1",
+    "queue-microtask": "^1.2.3",
+    "react": "^19.0.0",
+    "react-chatbot-kit": "^2.2.2",
+    "react-conditionally-render": "^1.0.2",
+    "react-dom": "^19.0.0",
+    "react-is": "^16.13.1",
+    "reflect.getprototypeof": "^1.0.9",
+    "regexp.prototype.flags": "^1.5.3",
+    "resolve": "^1.22.10",
+    "resolve-from": "^4.0.0",
+    "resolve-pkg-maps": "^1.0.0",
+    "reusify": "^1.0.4",
+    "run-parallel": "^1.2.0",
+    "safe-array-concat": "^1.1.3",
+    "safe-push-apply": "^1.0.0",
+    "safe-regex-test": "^1.1.0",
+    "scheduler": "^0.25.0",
+    "semver": "^7.6.3",
+    "set-function-length": "^1.2.2",
+    "set-function-name": "^2.0.2",
+    "sharp": "^0.33.5",
+    "shebang-command": "^2.0.0",
+    "shebang-regex": "^3.0.0",
+    "side-channel": "^1.1.0",
+    "side-channel-list": "^1.0.0",
+    "side-channel-map": "^1.0.1",
+    "side-channel-weakmap": "^1.0.2",
+    "simple-swizzle": "^0.2.2",
+    "source-map-js": "^1.2.1",
+    "stable-hash": "^0.0.4",
+    "streamsearch": "^1.1.0",
+    "string.prototype.includes": "^2.0.1",
+    "string.prototype.matchall": "^4.0.12",
+    "string.prototype.repeat": "^1.0.0",
+    "string.prototype.trim": "^1.2.10",
+    "string.prototype.trimend": "^1.0.9",
+    "string.prototype.trimstart": "^1.0.8",
+    "strip-bom": "^3.0.0",
+    "strip-json-comments": "^3.1.1",
+    "styled-jsx": "^5.1.6",
+    "supports-color": "^7.2.0",
+    "supports-preserve-symlinks-flag": "^1.0.0",
+    "tapable": "^2.2.1",
+    "to-regex-range": "^5.0.1",
+    "tr46": "^0.0.3",
+    "ts-api-utils": "^1.4.3",
+    "tsconfig-paths": "^3.15.0",
+    "tslib": "^2.8.1",
+    "type-check": "^0.4.0",
+    "typed-array-buffer": "^1.0.3",
+    "typed-array-byte-length": "^1.0.3",
+    "typed-array-byte-offset": "^1.0.4",
+    "typed-array-length": "^1.0.7",
+    "typescript": "^5.7.2",
+    "unbox-primitive": "^1.1.0",
+    "undici-types": "^5.26.5",
+    "uri-js": "^4.4.1",
+    "web-streams-polyfill": "^4.0.0-beta.3",
+    "webidl-conversions": "^3.0.1",
+    "whatwg-url": "^5.0.0",
+    "which": "^2.0.2",
+    "which-boxed-primitive": "^1.1.1",
+    "which-builtin-type": "^1.2.1",
+    "which-collection": "^1.0.2",
+    "which-typed-array": "^1.1.18",
+    "word-wrap": "^1.2.5",
+    "yocto-queue": "^0.1.0"
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/muzammil-13/airbnb-bot.git"
   },
-  "keywords": [
-    "react",
-    "airbnb",
-    "chatbot",
-    "chatgpt"
-  ],
-  "author": "muzammil-13",
-  "license": "MIT",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "bugs": {
     "url": "https://github.com/muzammil-13/airbnb-bot/issues"
   },
